add cookies section

--- a/homework-2-1/index.html
+++ b/homework-2-1/index.html
@@ -5,8 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Eskulap Template</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <article>
+        <section class="cookies-section">
+        <p class="cookies-block_text">This site uses cookies, so that my service can work better.</p>
+        <button class="cookies-block_btn">Accept</button>
+    </section>
+    </article>
+
+    <header>
+        <nav class="nav">
+            <div calss="nav-menu">
+            <span class="nav-menu_item"></span>
+            </div>
+        </nav>
+    </header>
+        <main calss="main">
+            <section>
+
+            </section>
+        </main>
+
 </body>
 </html>
