--- a/homework-2-1/index.html
+++ b/homework-2-1/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,28 +8,188 @@
     <title>Eskulap Template</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/base.css">
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <article>
+    <div class="banner">
         <section class="cookies-section">
-        <p class="cookies-block_text">This site uses cookies, so that my service can work better.</p>
-        <button class="cookies-block_btn">Accept</button>
-    </section>
-    </article>
+            <p class="cookies-block_text">This site uses cookies, so that my service can work better.</p>
+            <button class="cookies-block_btn">Accept</button>
+        </section>
 
-    <header>
-        <nav class="nav">
-            <div calss="nav-menu">
-            <span class="nav-menu_item"></span>
+
+        <header class="header">
+
+            <nav class="nav">
+                <button class="burger">
+
+                    <span class="burger-line burger-line_first"></span>
+                    <span class="burger-line burger-line_second"></span>
+                    <span class="burger-line burger-line_third"></span>
+                    <span class="burger-line burger-line_fourth"></span>
+
+                </button>
+            </nav>
+
+        </header>
+
+        <div class="profile-container">
+            <div class="profile-item"></div>
+            <div class="profile-text-block">
+                <h1 class="profile-title">
+                    free portfolio PSD template FOR GRAPHIC designerS
+                </h1>
+                <p class="profile-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                    <br> incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud<span
+                        class="profile-text__hidden"> exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                        deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit
+                        voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo
+                        inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
+                        voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores
+                        eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia
+                        dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut
+                        labore et dolore magnam aliquam quaerat voluptatem.</span></p>
             </div>
-        </nav>
-    </header>
-        <main calss="main">
-            <section>
+            <button class="profile-btn">Hire me</button>
+            <div class="profile-item__arrow">&#8595;</div>
+        </div>
+    </div>
+    <main class="main">
+        <section class="about-me">
+            <h2 class="h2_title">About Me</h2>
+            <p class="p_main about-me__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                voluptate velit<br>
+                esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                culpa qui officia </p>
+        </section>
+        <section class="expert-in">
+            <h2 class="h2_title">Expert In</h2>
+            <div class="expert-in-container">
+                <!-- Expert In Block -->
+                <div class="expert-in-block">
+                    <div class="expert-in-block__img"><img src="img/expert-in1.png" alt="Inteligentny obiekt wektorowy">
+                    </div>
+                    <h3 class="h3_title">MOBILE APP DESIGN</h3>
+                    <p class="p_main expert-in__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim<span
+                            class="span_hidden">
+                            veniam, quis nostrud exercitation .
+                            ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+                            reprehenderit in voluptate velit
+                            esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+                            sunt in culpa qui officia </span>
+                    </p>
+                </div>
+                <!-- Expert In Block -->
+                <div class="expert-in-block">
+                    <div class="expert-in-block__img"><img src="img/expert-in2.png" alt="Inteligentny obiekt wektorowy">
+                    </div>
+                    <h3 class="h3_title">WEB DESIGN</h3>
+                    <p class="p_main expert-in__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim<span
+                            class="span_hidden">
+                            veniam, quis nostrud exercitation .
+                            ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+                            reprehenderit in voluptate velit
+                            esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+                            sunt in culpa qui officia </span>
+                    </p>
+                </div>
+                <!-- Expert In Block -->
+                <div class="expert-in-block">
+                    <div class="expert-in-block__img"><img src="img/expert-in3.png" alt="Inteligentny obiekt wektorowy">
+                    </div>
+                    <h3 class="h3_title">WEB DEVELOPMENT</h3>
+                    <p class="p_main expert-in__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim<span
+                            class="span_hidden">
+                            veniam, quis nostrud exercitation .
+                            ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+                            reprehenderit in voluptate velit
+                            esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+                            sunt in culpa qui officia </span>
+                    </p>
+                </div>
+                <!-- Expert In Block -->
+                <div class="expert-in-block">
+                    <div class="expert-in-block__img"><img src="img/expert-in4.png" alt="Inteligentny obiekt wektorowy">
+                    </div>
+                    <h3 class="h3_title">PRODUCT DESIGN</h3>
+                    <p class="p_main expert-in__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim<span
+                            class="span_hidden">
+                            veniam, quis nostrud exercitation .
+                            ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+                            reprehenderit in voluptate velit
+                            esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+                            sunt in culpa qui officia </span>
+                    </p>
+                </div>
+                <!-- Expert In Block -->
+                <div class="expert-in-block">
+                    <div class="expert-in-block__img"><img src="img/expert-in5.png" alt="Inteligentny obiekt wektorowy">
+                    </div>
+                    <h3 class="h3_title">UX & UI</h3>
+                    <p class="p_main expert-in__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim<span
+                            class="span_hidden">
+                            veniam, quis nostrud exercitation .
+                            ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+                            reprehenderit in voluptate velit
+                            esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+                            sunt in culpa qui officia </span>
+                    </p>
+                </div>
+                <!-- Expert In Block -->
+                <div class="expert-in-block">
+                    <div class="expert-in-block__img"><img src="img/expert-in6.png" alt="Inteligentny obiekt wektorowy">
+                    </div>
+                    <h3 class="h3_title">ANIMATIONS</h3>
+                    <p class="p_main expert-in__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim<span
+                            class="span_hidden">
+                            veniam, quis nostrud exercitation .
+                            ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+                            reprehenderit in voluptate velit
+                            esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+                            sunt in culpa qui officia </span>
+                    </p>
+                </div>
+            </div>
 
-            </section>
-        </main>
-
+        </section>
+        <section class="latest-work">
+            <h2 class="h2_title">Latest Work</h2>
+            <div class="latest-work-container">
+                <div class="latest-work-block"><img src="img/Work_1.png" alt="Work1"></div>
+                <div class="latest-work-block"><img src="img/Work__2.png" alt="Work2"></div>
+                <div class="latest-work-block"><img src="img/Work_3.png" alt="Work3"></div>
+                <div class="latest-work-block"><img src="img/work_4.png" alt="Work4"></div>
+                <div class="latest-work-block"><img src="img/Work_5.png" alt="Work5"></div>
+                <div class="latest-work-block"><img src="img/Work_6.png" alt="Work6"></div>
+            </div>
+        </section>
+        <section class="clients">
+            <h2 class="h2_title">Clients</h2>
+            <div class="clients-container">
+                <img src="img/MSFT_logo_png.png" alt="MICROSOFT">
+                <img src="img/Samsung-logo-2015-Nobg.png" alt="SAMSUNG">
+                <img src="img/ibm_logo.png" alt="IBM">
+                <img src="img/Google_2015_logo.svg.png" alt="GOOGLE">
+            </div>
+        </section>
+        <footer class="footer">
+            <p class="footer__text">Need a graphic designer? <span class="footer__text-span">Ready to work!</span> </p>
+                <button class="profile-btn footer__btn">Hire me</button>
+        </footer>
+    </main>
+    <script src="script/script.js"></script>
 </body>
+
 </html>
