finished doing STRICT markup using the BEM naming

--- a/homework-2-2/index.html
+++ b/homework-2-2/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +11,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <header class="stict__header">
         <a href="#"><img src="img/logo.png" alt="LOGO" class="strict__logo"></a>
@@ -26,7 +28,10 @@
     <main>
         <section class="design">
             <h2 class="h2__title">Simple & pure design.</h2>
-            <p class="design__text">Designers everywhere gush with admiration upon seeing a web design and exclaim "its beautiful, it's so clean!". There are a countless number of webdesign round-ups dedicated to 'clean' design and it is a term thrown around quite a bit in the web design community. It can be easy to spot a good example of clean design.</p>
+            <p class="design__text">Designers everywhere gush with admiration upon seeing a web design and exclaim "its
+                beautiful, it's so clean!". There are a countless number of webdesign round-ups dedicated to 'clean'
+                design and it is a term thrown around quite a bit in the web design community. It can be easy to spot a
+                good example of clean design.</p>
         </section>
         <section class="feature">
             <div class="feature-block">
@@ -34,33 +39,104 @@
                     <i class="fa fa-mobile feature-block__icon" aria-hidden="true"></i>
                 </div>
                 <h3 class="h3__title">Optimized for all devices</h3>
-                <p class="feature-block__secription">STRICT has been designed to be fully 
+                <p class="feature-block__secription">STRICT has been designed to be fully
                     responsive on all devices</p>
             </div>
 
             <div class="feature-block">
                 <div class="feature-block__item">
-                        <i class="fas fa-paper-plane feature-block__icon"></i>
+                    <i class="fas fa-paper-plane feature-block__icon"></i>
                 </div>
                 <h3 class="h3__title">Clean & Minimal Design</h3>
-                <p class="feature-block__secription">STRICT has been designed to be fully 
+                <p class="feature-block__secription">STRICT has been designed to be fully
                     responsive on all devices</p>
             </div>
 
             <div class="feature-block">
                 <div class="feature-block__item">
-                        <i class="fas fa-bullhorn feature-block__icon"></i>
+                    <i class="fas fa-bullhorn feature-block__icon"></i>
                 </div>
                 <h3 class="h3__title">Font Awesome Icon</h3>
-                <p class="feature-block__secription">STRICT has been designed to be fully 
+                <p class="feature-block__secription">STRICT has been designed to be fully
                     responsive on all devices</p>
             </div>
         </section>
-    </main>
-    <footer>
+        <section class="portfolio">
+            <h2 class="h2__title portfolio__h2__title">Showcase your work like a pro.</h2>
+            <p class="p__description">Contact me if you like my work</p>
+            <div class="portfolio-container">
 
+                <figure class="portfolio-image-block">
+                    <img src="img/show1.png" alt="SHOW1">
+                    <figcaption>
+                        <button class="portfolio-btn"><i class="fas fa-search-plus portfolio__icon"></i></button>
+                        <button class="portfolio-btn"><i class="fas fa-search-plus portfolio__icon"></i></button>
+                    </figcaption>
+                </figure>
+                <figure class="portfolio-image-block">
+                    <img src="img/show2.png" alt="SHOW1">
+                    <figcaption>
+                        <button class="portfolio-btn"><i class="fas fa-search-plus portfolio__icon"></i></button>
+                        <button class="portfolio-btn"><i class="fas fa-search-plus portfolio__icon"></i></button>
+                    </figcaption>
+                </figure>
+                <figure class="portfolio-image-block">
+                    <img src="img/show3.png" alt="SHOW1">
+                    <figcaption>
+                        <button class="portfolio-btn"><i class="fas fa-search-plus portfolio__icon"></i></button>
+                        <button class="portfolio-btn"><i class="fas fa-search-plus portfolio__icon"></i></button>
+                    </figcaption>
+                </figure>
+                <figure class="portfolio-image-block">
+                    <img src="img/show4.png" alt="SHOW1">
+                    <figcaption>
+                        <button class="portfolio-btn"><i class="fas fa-search-plus portfolio__icon"></i></button>
+                        <button class="portfolio-btn"><i class="fas fa-search-plus portfolio__icon"></i></button>
+                    </figcaption>
+                </figure>
+                <figure class="portfolio-image-block">
+                    <img src="img/show5.png" alt="SHOW1">
+                    <figcaption>
+                        <button class="portfolio-btn"><i class="fas fa-search-plus portfolio__icon"></i></button>
+                        <button class="portfolio-btn"><i class="fas fa-search-plus portfolio__icon"></i></button>
+                    </figcaption>
+                </figure>
+                <figure class="portfolio-image-block">
+                    <img src="img/show6.png" alt="SHOW1">
+                    <figcaption>
+                        <button class="portfolio-btn"><i class="fas fa-search-plus portfolio__icon"></i></button>
+                        <button class="portfolio-btn"><i class="fas fa-search-plus portfolio__icon"></i></button>
+                    </figcaption>
+                </figure>
+
+            </div>
+        </section>
+        <section class="stay-with-us">
+            <h2 class="h2__title stay-with-us__h2__title">Stay with us</h2>
+            <p class="p__description">We ensure quailty & support</p>
+            <form action="#" method="GET" class="contact-form">
+                <input type="text" placeholder="Full Name" class="contact-form__input">
+                <input type="email" placeholder="Email Address" class="contact-form__input">
+                <textarea cols="30" rows="10" placeholder="Message"
+                    class="contact-form__textarea"></textarea>
+                <div class="contact-form-wrapper">
+                    <span class=""><input type="checkbox">Subscribe Newsletter</span>
+                    <button class="contact-form__btn">Send</button>
+                </div>
+            </form>
+        </section>
+    </main>
+    <footer class="footer">
+        <span class="footer__copyright">Copyritht 2014, STRICT</span>
+        <nav class="icon-container">
+            <div class="icon-container__item"><i class="fab fa-facebook-f"></i></div>
+            <div class="icon-container__item"><i class="fab fa-twitter"></i></div>
+            <div class="icon-container__item"><i class="fab fa-google-plus-g"></i></div>
+            <div class="icon-container__item"><i class="fab fa-linkedin-in"></i></div>
+        </nav>
     </footer>
 
     <script src="https://kit.fontawesome.com/19d439e40e.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
